<resources>
    <string name="app_name">Clockwork FCamara</string>
    <string name="splash_screen_title">A Clockwork Orange</string>
    <string name="btn_access">Acessar</string>
    <string name="hint_e_mail">E-mail</string>
    <string name="tv_e_mail">E-mail</string>
    <string name="unregistered_email">Email não cadastrado</string>
    <string name="unregistered_email_msg">Verifique se você digitou corretamente o email que foi cadastrado no sistema.</string>
    <string name="please_wait">Por favor, aguarde!</string>
    <string name="tv_squad_34">SQUAD#34</string>
    <string name="password">Senha</string>
    <string name="btn_login">Login</string>
    <string name="btn_agendar">Fazer Agendamento</string>
    <string name="tv_meus_agendamentos">Meus agendamentos</string>
    <string name="tv_availability">Disponibilidade</string>
    <string name="sao_paulo">São Paulo - </string>
    <string name="santos">Santos - </string>
    <string name="main_activity_title">Dashboard</string>
    <string name="scheduling_system">SISTEMA DE AGENDAMENTO</string>
    <string name="tv_schedule">Fazer Agendamentos</string>
    <string name="tv_select_unit">Você quer fazer um agendamento em qual escritório?</string>
    <string name="select_an_option">Selecione uma opção</string>
    <string name="tv_work_station_or_meeting_room">O que você quer agendar?</string>
    <string name="tv_scheduling_type">Que tipo de agendamento você quer fazer?</string>
    <string name="tv_recurrent_explanation">O agendamento recorrente se refere a selecionar o mesmo dia da semana 4 vezes seguidas, começando na data escolhida abaixo</string>
    <string name="tv_shift">Escolha o turno</string>
    <string name="date">DD/MM/AAAA</string>
    <string name="tv_date">Escolha uma data</string>
    <string name="tv_add_more_dates">Adicionar nova data</string>
    <string name="selected_date">Data selecionada:</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="tv_confirm_scheduling">Confirmar Agendamento?</string>
    <string name="tv_unit">Escritório: </string>
    <string name="tv_type_confirmation">Tipo: </string>
    <string name="tv_day_of_week">Dia da semana: </string>
    <string name="tv_shift_selected">Turno: </string>
    <string name="tv_no_dates_scheduled">Sem datas agendadas no momento!</string>
    <string name="tv_edit_schedule">Editar Agendamento</string>
    <string name="delte_schedule">Apagar Agendamento?</string>
</resources>