<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="296dp"
    android:layout_height="420dp">

    <ImageButton
        android:id="@+id/ib_cancel_dialog_recurrent"
        android:layout_width="24dp"
        android:layout_height="28dp"
        android:layout_marginTop="18.67dp"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_confirm_scheduling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/metropolis_bold"
        android:gravity="center"
        android:text="@string/tv_confirm_scheduling"
        android:textColor="@color/secondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="202dp"
        android:layout_height="144dp"
        android:layout_marginTop="21dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm_scheduling">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_regular"
                android:lineSpacingExtra=".5px"
                android:text="@string/tv_unit"
                android:textColor="@color/secondary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_selected_unit_recurrent_confirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_regular"
                android:lineSpacingExtra=".5px"
                android:text="São Paulo"
                android:textColor="@color/secondary"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_type_recurrent_confirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_regular"
                android:lineSpacingExtra=".5px"
                android:text="@string/tv_type_confirmation"
                android:textColor="@color/secondary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_selected_type_recurrent_confirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_regular"
                android:lineSpacingExtra=".5px"
                android:text="Recorrente"
                android:textColor="@color/secondary"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_day_of_week_recurrent_confirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_regular"
                android:lineSpacingExtra=".5px"
                android:text="@string/tv_day_of_week"
                android:textColor="@color/secondary"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dates_selected_recurrent_confirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_regular"
                android:lineSpacingExtra=".5px"
                android:text="Datas: 01/07/21, 08/09/21 e 12/09/21"
                android:textColor="@color/secondary"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_shift_confirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_regular"
                android:lineSpacingExtra=".5px"
                android:text="@string/tv_shift_selected"
                android:textColor="@color/secondary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_shift_selected_recurrent_confirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_regular"
                android:lineSpacingExtra=".5px"
                android:text="Manhã"
                android:textColor="@color/secondary"
                android:textSize="16sp" />


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/btn_cancel_recurrent_confirmation"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_shape_secondary"
        android:elevation="20dp"
        android:fontFamily="@font/metropolis_semibold"
        android:letterSpacing=".04"
        android:shadowColor="@color/gray"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_confirm_recurrent_confirmation" />

    <TextView
        android:id="@+id/btn_confirm_recurrent_confirmation"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_shape"
        android:elevation="20dp"
        android:fontFamily="@font/metropolis_semibold"
        android:letterSpacing=".04"
        android:shadowColor="@color/gray"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>