<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_34sdp"
        android:fontFamily="@font/metropolis_bold"
        android:text="Olá, Fulano"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main_activity" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/btn_shape"
        android:fontFamily="@font/metropolis_semibold"
        android:text="@string/btn_agendar"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hello" />

    <TextView
        android:id="@+id/tv_meus_agendamentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_39sdp"
        android:fontFamily="@font/metropolis_bold"
        android:text="@string/tv_meus_agendamentos"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_meus_agendamentos" />

    <TextView
        android:id="@+id/tv_availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metropolis_bold"
        android:text="@string/tv_availability"
        android:layout_marginTop="@dimen/_30sdp"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <TextView
        android:id="@+id/tv_sao_paulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/metropolis_bold"
        android:text="@string/sao_paulo"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toStartOf="@+id/tv_santos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_availability" />

    <TextView
        android:id="@+id/tv_santos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/metropolis_bold"
        android:text="@string/santos"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/tv_sao_paulo"
        app:layout_constraintTop_toBottomOf="@+id/tv_availability" />

    <TextView
        android:id="@+id/tv_sao_paulo_availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/metropolis_bold"
        android:text="30%"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="@+id/tv_sao_paulo"
        app:layout_constraintStart_toStartOf="@+id/tv_sao_paulo"
        app:layout_constraintTop_toBottomOf="@+id/tv_sao_paulo" />

    <TextView
        android:id="@+id/tv_santos_availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/metropolis_bold"
        android:text="50%"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="@+id/tv_santos"
        app:layout_constraintStart_toStartOf="@+id/tv_santos"
        app:layout_constraintTop_toBottomOf="@+id/tv_santos" />

</androidx.constraintlayout.widget.ConstraintLayout>