<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/_255sdp"
        android:layout_height="@dimen/_72sdp"
        android:layout_marginTop="@dimen/_122sdp"
        android:background="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:text="@string/tv_e_mail"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="@+id/iv_logo"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email_adress"
        android:layout_width="@dimen/_256sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:backgroundTint="@color/white"
        app:boxCornerRadiusTopStart="@dimen/_16sdp"
        app:boxCornerRadiusBottomStart="@dimen/_16sdp"
        app:boxCornerRadiusBottomEnd="@dimen/_16sdp"
        app:boxCornerRadiusTopEnd="@dimen/_16sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:ems="10"
        android:hint="@string/hint_e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:background="@drawable/btn_shape"
        android:layout_width="@dimen/_256sdp"
        android:layout_height="@dimen/_48sdp"
        android:text="@string/btn_access"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_adress" />

    <ImageView
        android:id="@+id/iv_logo2"
        android:layout_width="@dimen/_256sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_114sdp"
        android:background="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>